--- a/nginx.conf
+++ b/nginx.conf
@@ -46,17 +46,16 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
-        location /children/app1-history {
-            root   html\build;
-            index  index.html index.htm;
-            try_files $uri $uri/ /children/app1-history/index.html;
+        location /app1-history/ {
+            proxy_pass http://localhost:8091/;
+            proxy_set_header Host $host:$server_port;
         }
 
-        location /children/app2-history {
-            root   html\build;
-            index  index.html index.htm;
-            try_files $uri $uri/ /children/app2-history/index.html;
+        location /app2-history/ {
+            proxy_pass http://localhost:8092/;
+            proxy_set_header Host $host:$server_port;
         }
+
         #error_page  404              /404.html;
 
         # redirect server error pages to the static page /50x.html
