--- a/app2/package.json
+++ b/app2/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "customize-cra": "^1.0.0",
     "@rescripts/cli": "^0.0.16",
+    "copys-plugin": "^1.0.7",
     "react-app-rewired": "^2.1.8"
   }
 }
